// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <dl>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="#geo-alt-fill"
        />
      </svg>
      <div
        class="align-middle d-inline-block"
      >
        <p
          class="d-inline-block mb-0"
        >
          Only title label with icon
        </p>
      </div>
    </dt>
    <dd>
      <p
        class="mb-4"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      <div
        class="align-middle d-inline-block"
      >
        First title label
      </div>
    </dt>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="#geo-alt-fill"
        />
      </svg>
      <div
        class="align-middle d-inline-block"
      >
        <p
          class="mb-0 d-inline-block"
        >
          Second title label
        </p>
      </div>
    </dt>
    <dd>
      <p
        class="mb-4"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      <div
        class="align-middle d-inline-block"
      >
        Only title label
      </div>
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <dd>
      Description text goes here.
    </dd>
  </dl>
</jest>
`;

exports[`OE - Description List renders correctly 2`] = `
<jest>
  <dl
    class="d-grid grid-3-9"
  >
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="#geo-alt-fill"
        />
      </svg>
      <div
        class="align-middle d-inline-block"
      >
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </div>
    </dt>
    <dd>
      <p
        class="mb-5"
      >
        Description text goes here.
      </p>
    </dd>
    <div>
      <dt>
        <div
          class="align-middle d-inline-block"
        >
          <p
            class="mb-0"
          >
            First title label
          </p>
        </div>
      </dt>
      <dt>
        <svg
          class="me-2 bi icon--xs"
        >
          <use
            xlink:href="#geo-alt-fill"
          />
        </svg>
        <div
          class="align-middle d-inline-block"
        >
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
    </div>
    <dd>
      <p
        class="mb-5"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      <div
        class="align-middle d-inline-block"
      >
        Only title label
      </div>
    </dt>
    <div>
      <dd>
        Description text goes here.
      </dd>
      <dd>
        <p
          class="mb-5"
        >
          Description text goes here.
        </p>
      </dd>
    </div>
  </dl>
</jest>
`;
